--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
 		"supertest": "^2.0.1"
 	},
 	"scripts": {
-		"start": "SET NODE_ENV=dev && node index.js",
-		"test": "SET NODE_ENV=dev && mocha --timeout 10000"
+		"start": "SET NODE_ENV=dev && SET MONGOLAB_URI=localhost:27017/socketDB && node index.js",
+		"test": "SET NODE_ENV=dev && SET MONGOLAB_URI=localhost:27017/socketDB && mocha --timeout 10000"
 	}
 }
