--- a/package.json
+++ b/package.json
@@ -1,23 +1,24 @@
 {
-	"name": "christmas-decoration",
-	"version": "0.0.1",
-	"description": "A christmas decoration contests app",
-	"main": "index.js",
-	"author": "Guy Biton",
-	"license": "ISC",
-	"dependencies": {
-		"express": "^4.14.0",
-		"fs": "0.0.1-security",
-		"monk": "^3.1.3",
-		"socket.io": "^1.7.2"
-	},
-	"devDependencies": {
-		"chai": "^3.5.0",
-		"mocha": "^3.2.0",
-		"supertest": "^2.0.1"
-	},
-	"scripts": {
-		"start": "SET NODE_ENV=dev && SET MONGOLAB_URI=localhost:27017/socketDB && node index.js",
-		"test": "SET NODE_ENV=dev && SET MONGOLAB_URI=localhost:27017/socketDB && mocha --timeout 10000"
-	}
+  "name": "christmas-decoration",
+  "version": "0.0.1",
+  "description": "A christmas decoration contests app",
+  "main": "index.js",
+  "author": "Guy Biton",
+  "license": "ISC",
+  "dependencies": {
+    "cordova": "^6.4.0",
+    "express": "^4.14.0",
+    "fs": "0.0.1-security",
+    "monk": "^3.1.3",
+    "socket.io": "^1.7.2"
+  },
+  "devDependencies": {
+    "chai": "^3.5.0",
+    "mocha": "^3.2.0",
+    "supertest": "^2.0.1"
+  },
+  "scripts": {
+    "start": "SET NODE_ENV=dev && SET MONGOLAB_URI=localhost:27017/socketDB && node index.js",
+    "test": "SET NODE_ENV=dev && SET MONGOLAB_URI=localhost:27017/socketDB && mocha --timeout 10000"
+  }
 }
